# llm-zoomcamp

00-search-engine/: config.py  main.py  pyproject.toml  rag_intro.ipynb  rag_intro.py  requirements.txt  search_engine_practice.ipynb
01-agentic-rag/code_practice/: assistant.py  config.py  data_ingestion.py  documents_indexing.py  notebook.ipynb  pyproject.toml  qdrant_extraction_and_training_sparse_and_dense.py  rag_qdrant_inference_practice.py
01-agentic-rag/code_practice/auto/: start_qdrant
02-vector-search/: config.py  pyproject.toml  qdrant_extraction_and_training.py  qdrant_extraction_and_training_sparse.py  qdrant_extraction_and_training_sparse_and_dense.py  rag_practice.ipynb  rag_qdrant_inference_practice.py  requirements.txt  utility_functions.py
02-vector-search/qdrant_storage/: raft_state.json
02-vector-search/qdrant_storage/collections/zoomcamo-rag/0/: newest_clocks.json
03-evaluation/: pyproject.toml
03-evaluation/search_evaluation/: Evaluation_with_vector_store.ipynb  ground-truth-data-practice.csv  ground-truth-data.ipynb  rag_functions.py
05-best-practices/best-practices-practice/: ElasticSearchHybridSearch.ipynb  pyproject.toml
0a-agents/: main.py  notebook.ipynb
cohorts/2025/03-evaluation/: pyproject.toml
cohorts/2025/03-evaluation/rag_evaluation/: offline-rag-evaluation.ipynb
cohorts/2025/03-evaluation/search_evaluation/: Evaluation_with_vector_store.ipynb  documents-with-ids-updated.json  evaluate-text.ipynb  ground-truth-data-practice.ipynb  test_functions.py
cohorts/2025/0a-agents/: agentic_rag.ipynb  pyproject.toml
(+78 files in other folders)
