[project]
name = "best-practices-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch",
    "jupyter>=1.1.1",
    "minsearch",
    "notebook",
    "openai",
    "pandas>=2.3.1",
    "scikit-learn",
    "sentence-transformers>=5.1.2",
    "tdqm",
]
