[project]
name = "best-practices-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-elasticsearch>=0.4.0",
    "langchain-huggingface>=0.3.1",
    "minsearch",
    "notebook",
    "openai",
    "pandas>=2.3.1",
    "ranx>=0.3.21",
    "scikit-learn",
    "sentence-transformers>=5.1.2",
    "tdqm",
]
