[project]
name = "0a-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "qdrant-client[fastembed]>=1.16.0",
    "tqdm>=4.67.1",
]
